--- a/app/views/tasks/index.html.erb
+++ b/app/views/tasks/index.html.erb
@@ -1,7 +1,12 @@
 <h1>My tasks</h1>
 <ul>
   <% @tasks.each do |task| %>
-  <li><%= link_to "#{task.title}", task_path(task) %></li>
+  <li>
+    <%= link_to task.title, task_path(task) %>
+    <%= link_to "edit task", edit_task_path(task) %>
+  </li>
   <br>
   <% end %>
 </ul>
+
+<h2><%= link_to "Add a new task", tasks_new_path %></h2>
